[gd_scene load_steps=24 format=3 uid="uid://bv4dys5ufh6x"]

[ext_resource type="Resource" uid="uid://rprxybbjpds2" path="res://Resourses/Units/player1.tres" id="2_vtpj6"]
[ext_resource type="Script" path="res://Scripts/GameDirector.gd" id="3_1a71y"]
[ext_resource type="Resource" uid="uid://dbrvne50pub0" path="res://Resourses/Units/enemy1.tres" id="5_ol3o3"]
[ext_resource type="Resource" uid="uid://dwyyyt3dohhrn" path="res://Resourses/Cards/Card1.tres" id="6_ug7nl"]
[ext_resource type="Resource" uid="uid://drqynikbv6dsj" path="res://Resourses/Cards/card2.tres" id="7_ulx04"]
[ext_resource type="PackedScene" uid="uid://dq1d1who1d74p" path="res://Scenes/gui.tscn" id="8_gm0w0"]
[ext_resource type="Script" path="res://Scripts/RayCast.gd" id="8_hdsgx"]
[ext_resource type="PackedScene" uid="uid://diy7kumo6udta" path="res://Scenes/unit_2d.tscn" id="9_meili"]
[ext_resource type="Texture2D" uid="uid://bfg7x5trq773l" path="res://Assets/white.png" id="9_w7743"]
[ext_resource type="PackedScene" uid="uid://ba13bj6s0nseq" path="res://Scenes/card2d.tscn" id="10_7u201"]
[ext_resource type="PackedScene" uid="uid://cow0hcch73mmw" path="res://Scenes/enemy_2d.tscn" id="10_d5xgn"]
[ext_resource type="Resource" uid="uid://bpvvxipqe2g8x" path="res://Resourses/CombatsConfigs/combat1.tres" id="10_nsjya"]
[ext_resource type="Script" path="res://Scripts/CardContainer.gd" id="12_hlh61"]
[ext_resource type="Script" path="res://Scripts/Arcs.gd" id="13_52blp"]
[ext_resource type="Resource" uid="uid://dym6fnykrgmsm" path="res://Resourses/Units/player2.tres" id="14_egxjh"]
[ext_resource type="Resource" uid="uid://dnmku0di7eldk" path="res://Resourses/Units/enemy2.tres" id="15_uk84v"]
[ext_resource type="Script" path="res://Scripts/Menu.gd" id="16_ifrwr"]
[ext_resource type="Texture2D" uid="uid://bpunl21fktg34" path="res://Assets/MenuItems/IMG_1018.PNG" id="18_54lb6"]
[ext_resource type="Theme" uid="uid://cb0nq8ru70sb7" path="res://Resourses/Themes/menu_buttons_theme.tres" id="18_ukxrg"]
[ext_resource type="Texture2D" uid="uid://cp4pc78oa2rcy" path="res://Assets/MenuItems/Menu Button.PNG" id="20_xr2x8"]
[ext_resource type="PackedScene" uid="uid://8tkkaws71mr" path="res://Scenes/endgame_menu.tscn" id="21_b6hdc"]
[ext_resource type="Texture2D" uid="uid://xjesikls6ib2" path="res://Assets/Backgrounds/Background2.PNG" id="21_wqs8d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ei2tc"]

[node name="root" type="Node3D"]

[node name="Unit2D" parent="." instance=ExtResource("9_meili")]
position = Vector2(278, 452)
basestats = ExtResource("2_vtpj6")

[node name="Slot" parent="Unit2D" index="1" node_paths=PackedStringArray("source")]
speed = 1
source = NodePath("..")

[node name="Enemy2D" parent="." instance=ExtResource("10_d5xgn")]
position = Vector2(1585, 452)
basestats = ExtResource("5_ol3o3")

[node name="EnemySlot" parent="Enemy2D" index="1" node_paths=PackedStringArray("source", "target")]
card = ExtResource("7_ulx04")
source = NodePath("..")
target = NodePath("../../Unit2D")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="GUI" parent="." instance=ExtResource("8_gm0w0")]

[node name="RayCast2D" type="RayCast2D" parent="."]
modulate = Color(0, 0.945098, 0, 1)
position = Vector2(411, 132)
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
script = ExtResource("8_hdsgx")

[node name="Sprite2D" type="Sprite2D" parent="RayCast2D"]
visible = false
scale = Vector2(0.02, 0.02)
texture = ExtResource("9_w7743")

[node name="Pustishka" type="CharacterBody2D" parent="."]
editor_description = "raycast dummy to not return null"
position = Vector2(-213, -171)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pustishka"]
shape = SubResource("RectangleShape2D_ei2tc")

[node name="GameDirector" type="Node" parent="." node_paths=PackedStringArray("cardContainer", "scene")]
script = ExtResource("3_1a71y")
cardContainer = NodePath("../CardContainer")
scene = NodePath("..")
combatConfig = ExtResource("10_nsjya")

[node name="CardContainer" type="Node" parent="." node_paths=PackedStringArray("template", "scene")]
script = ExtResource("12_hlh61")
cards = Array[Resource("res://Scripts/CardConfig.gd")]([ExtResource("6_ug7nl"), ExtResource("6_ug7nl"), ExtResource("6_ug7nl")])
template = NodePath("Card2")
scene = NodePath(".")
width = 550.0

[node name="Card2" parent="CardContainer" instance=ExtResource("10_7u201")]
visible = false
position = Vector2(598, 511)
scale = Vector2(1.25, 1.25)
cardConfig = ExtResource("7_ulx04")

[node name="Card3" parent="CardContainer" instance=ExtResource("10_7u201")]
visible = false
position = Vector2(416, 511)
scale = Vector2(1.25, 1.25)
cardConfig = ExtResource("6_ug7nl")

[node name="ARCS" type="Node2D" parent="." node_paths=PackedStringArray("raycast")]
z_index = 1
script = ExtResource("13_52blp")
raycast = NodePath("../RayCast2D")

[node name="Unit2D2" parent="." instance=ExtResource("9_meili")]
position = Vector2(525, 674)
basestats = ExtResource("14_egxjh")

[node name="Slot" parent="Unit2D2" index="1" node_paths=PackedStringArray("source")]
speed = 1
source = NodePath("..")

[node name="Enemy2D2" parent="." instance=ExtResource("10_d5xgn")]
position = Vector2(1360, 674)
basestats = ExtResource("15_uk84v")

[node name="EnemySlot" parent="Enemy2D2" index="1" node_paths=PackedStringArray("source", "target")]
card = ExtResource("6_ug7nl")
source = NodePath("..")
target = NodePath("../../Unit2D2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 3

[node name="Menu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("16_ifrwr")

[node name="DarkOverlay" type="ColorRect" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.505882)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.493359
anchor_top = 0.497222
anchor_right = 0.493359
anchor_bottom = 0.497222
offset_left = -417.0
offset_top = -648.0
offset_right = 2315.0
offset_bottom = 1400.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.315, 0.315)
texture = ExtResource("18_54lb6")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/Menu/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -339.0
offset_top = -195.429
offset_right = 339.0
offset_bottom = 102.571
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.870588, 0.733333, 0.435294, 1)
theme_override_font_sizes/font_size = 216
text = "OFFENCE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -58.0
offset_right = 1860.0
offset_bottom = 1290.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.215, 0.215)
alignment = 1

[node name="UnpauseBtn" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("18_ukxrg")
theme_override_colors/font_color = Color(0.870588, 0.733333, 0.435294, 1)
text = "Продолжить"
icon = ExtResource("20_xr2x8")
icon_alignment = 1

[node name="Exit" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("18_ukxrg")
theme_override_colors/font_color = Color(0.870588, 0.733333, 0.435294, 1)
text = "Выйти"
icon = ExtResource("20_xr2x8")
icon_alignment = 1

[node name="EndgameMenu" parent="CanvasLayer" instance=ExtResource("21_b6hdc")]
visible = false

[node name="Background" type="TextureRect" parent="."]
z_index = -2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("21_wqs8d")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Allies" type="Node2D" parent="SpawnPoints"]

[node name="Ally1" type="Node2D" parent="SpawnPoints/Allies"]
position = Vector2(265, 422)

[node name="Ally2" type="Node2D" parent="SpawnPoints/Allies"]
position = Vector2(142, 772)

[node name="Ally3" type="Node2D" parent="SpawnPoints/Allies"]
position = Vector2(464, 601)

[node name="Ally4" type="Node2D" parent="SpawnPoints/Allies"]
position = Vector2(740, 422)

[node name="Ally5" type="Node2D" parent="SpawnPoints/Allies"]
position = Vector2(642, 772)

[node name="Enemies" type="Node2D" parent="SpawnPoints"]

[node name="Enemy1" type="Node2D" parent="SpawnPoints/Enemies"]
position = Vector2(1575, 407)

[node name="Enemy2" type="Node2D" parent="SpawnPoints/Enemies"]
position = Vector2(1705, 772)

[node name="Enemy3" type="Node2D" parent="SpawnPoints/Enemies"]
position = Vector2(1391, 611)

[node name="Enemy4" type="Node2D" parent="SpawnPoints/Enemies"]
position = Vector2(1087, 772)

[node name="Enemy5" type="Node2D" parent="SpawnPoints/Enemies"]
position = Vector2(1218, 422)

[connection signal="next_turn" from="GUI" to="GameDirector" method="_on_gui_next_turn"]
[connection signal="selectedUnit" from="GameDirector" to="GUI" method="_on_game_director_selected_unit"]
[connection signal="unselect" from="GameDirector" to="GUI" method="_on_game_director_unselect"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/UnpauseBtn" to="CanvasLayer/Menu" method="_on_unpause_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Exit" to="CanvasLayer/Menu" method="_on_exit_pressed"]

[editable path="Unit2D"]
[editable path="Enemy2D"]
[editable path="Unit2D2"]
[editable path="Enemy2D2"]
